--- a/Pipfile
+++ b/Pipfile
@@ -6,11 +6,11 @@ name = "pypi"
 [packages]
 urllib3 = "*"
 regex = "*"
-pytube = {git = "https://github.com/pytube/pytube"}
 spotipy = "*"
 flask = "*"
 flask-restful = "*"
 zipfile36 = "*"
+gunicorn = "*"
 
 [dev-packages]
 
